# Design-Patterns

./: CMakeLists.txt  Folder.DotSettings
Behavioural/Momento/: CMakeLists.txt  README.md
Behavioural/Momento/L Docs/: LDocs.cpp  LDocs.h  LDocsHistory.cpp  LDocsHistory.h  LDocsState.cpp  LDocsState.h  README.md
Behavioural/Momento/Text Editor/: Editor.cpp  Editor.h  EditorState.cpp  EditorState.h  History.cpp  History.h
Behavioural/State/: README.md
